test/cases/compile_errors/if_condition_is_bool_not_int.zig
export fn f() void {
    if (0) {}
}

// error
// backend=stage2
// target=native
//
// :2:9: error: expected type 'bool', found 'comptime_int'
